[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.3"
serde = {version = "1.0.219", features = ["derive"]}
tokio = {version = "1.44.2", features = ["full"]}
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
scan_fmt = "0.2.6"
mime_guess = "2.0.5"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
tower = "0.5.2"
